--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,12 @@
     "ext-mbstring": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^12.5"
+    "phpunit/phpunit": "^11.0 || ^12.0"
   },
   "license": "MIT",
+  "scripts": {
+    "test": "phpunit"
+  },
   "autoload": {
     "psr-4": {
       "Paymongo\\": "src/"
